syntax = "proto3";

package kvstore;

// The service definition.
service Kv {
  // Sends a request to get a value for a given key.
  rpc Get(Key) returns (Value);

  // Sends a request to set a value for a given key.
  // Returns the key for validation.
  rpc Set(KeyValue) returns (Key);

  // Sends a request to delete a value for a given key.
  // Returns the key for validation.
  rpc Delete(Key) returns (Key);

  // Determine if all provided keys have the same value.
  rpc Eq(Keys) returns (Bool);

  // Determine if all provided keys have different values.
  rpc NotEq(Keys) returns (Bool);
}

message Bool {
  bool value = 1;
}

// The key half of a key-value pair.
message Key {
  string key = 1;
}

// Multiple keys, each representing a key in a key-value pair.
message Keys {
  repeated string keys = 1;
}

// The value half of a key-value pair.
message Value {
  string value = 1;
}

// A key-value pair.
message KeyValue {
  string key = 1;
  string value = 2;
}
