syntax = "proto3";

package blob;
import 'common.proto';

// Service definition for BLOB operations.
service Blob {
  // Retrieves a BLOB by its ID.
  rpc Get(stream BlobId) returns (stream BlobData);

  // Stores a new BLOB.
  rpc Store(stream BlobData) returns (stream BlobId);

  // Updates an existing BLOB.
  rpc Update(stream UpdateRequest) returns (stream BlobId);

  // Deletes a BLOB by its ID.
  rpc Delete(stream BlobId) returns (stream BlobId);

  // Determine if all provided BLOB IDs have the same data.
  rpc EqData(stream BlobId) returns (common.Bool);

  // Determine if all provided BLOB IDs have different data.
  rpc NotEqData(stream BlobId) returns (common.Bool);
}

// A unique identifier for a BLOB.
message BlobId {
  uint64 id = 1; // The ID of a BLOB.
}

// A BLOB and its optional metadata.
message BlobData {
  bytes bytes = 1; // The binary data of the BLOB.
  optional string metadata = 2; // Optional metadata as a JSON string or similar.
}

// Update message for updating a BLOB.
message UpdateRequest {
  uint64 id = 1; // The ID of the BLOB to update.
  optional bytes bytes = 2; // The updated binary data of the BLOB.
  bool should_update_metadata = 3; // Whether to update the metadata.
  optional string metadata = 4; // The updated metadata of the BLOB. Ignored if should_update_metadata is false.
}
